[gd_scene load_steps=6 format=3 uid="uid://biwjwx7qkeovq"]

[ext_resource type="Script" path="res://scripts/disk_rigid.gd" id="1_3x7jr"]
[ext_resource type="Texture2D" uid="uid://mujrrxupnbt1" path="res://assets/images/structures/disk_ungrounded.png" id="2_sxign"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c2mjn"]
size = Vector2(80, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7o5b3"]
size = Vector2(80, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fj0nm"]
size = Vector2(82, 28)

[node name="Disk" type="RigidBody2D" node_paths=PackedStringArray("death", "detector", "sprite", "collision", "sfx_player", "straight_timer", "kick_timer", "uppercut_timer")]
collision_layer = 0
mass = 0.1
gravity_scale = 0.5
inertia = 0.5
lock_rotation = true
script = ExtResource("1_3x7jr")
death = NodePath("Area2D2")
detector = NodePath("Area2D")
sprite = NodePath("Sprite2D")
collision = NodePath("CollisionShape2D")
sfx_player = NodePath("SFXPlayer")
straight_timer = NodePath("StraightTimer")
kick_timer = NodePath("KickTimer")
uppercut_timer = NodePath("UppercutTimer")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_c2mjn")
disabled = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_sxign")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_7o5b3")

[node name="Area2D2" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource("RectangleShape2D_fj0nm")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[node name="StraightTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="KickTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="UppercutTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="SFXPlayer" type="AudioStreamPlayer2D" parent="."]
bus = &"SFX"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="area_entered" from="Area2D2" to="." method="_on_area_2d_2_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
